# ellerre

./: .gitignore  CMakeLists.txt  README.md  README.org  process-dot.py  process-dots.py  run-steps.py  runanimation.py
.github/workflows/: build.yml
ellerre-web/: .gitignore  Aptfile  README.org  buildpack-run.sh  init.R  run.R  server.R  ui.R
examples/: 9.23_book.ee  9.30_book.ee  AB.ee  XYZ.ee  a6.ee  aa.ee  ex0.ee  ex1.ee  g0.ee  g1.ee  g2.ee  g2a.ee  g3.ee  g4.ee  g5.ee  gra01.ee  gra02.ee  gra03.ee  gra03b.ee  jan.ee  kka.ee  q1.ee  q2.ee  q3.ee  q4.ee  q5.ee  q6.ee  q7.ee  q8.ee  q9.ee  q9_ll1.ee  set.ee  www.ee
src/: LALR1.cc  LALR1.h  LR0.cc  LR0.h  LR1.cc  LR1.h  grammar.cc  grammar.h  item.cc  item.h  lr0.cc  lr1.cc  main.cc  main.h  main_lalr1.cc  main_lr0.cc  main_lr1.cc  parser.cc  parser.h  parser.y  rule.cc  rule.h  scanner.l  state.cc  state.h  symbol.cc  symbol.h
